[gd_scene load_steps=3 format=3 uid="uid://ds7rx6aekhuuu"]

[ext_resource type="Texture2D" uid="uid://ypyh5b1jmxq4" path="res://imagenes/fondo1.jpg" id="1_dayui"]
[ext_resource type="Script" uid="uid://dd7sygvpe2d57" path="res://scripts/juego.gd" id="1_v0a8y"]

[node name="juego" type="Node2D"]
script = ExtResource("1_v0a8y")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_dayui")

[node name="OpcionA" type="Button" parent="."]
offset_left = 96.0
offset_top = 679.0
offset_right = 902.0
offset_bottom = 796.0
theme_override_font_sizes/font_size = 46
text = "opcion A"
autowrap_mode = 3

[node name="OpcionD" type="Button" parent="."]
offset_left = 1015.0
offset_top = 842.0
offset_right = 1863.0
offset_bottom = 959.0
theme_override_font_sizes/font_size = 46
text = "opcion D"
autowrap_mode = 3

[node name="OpcionB" type="Button" parent="."]
offset_left = 1010.0
offset_top = 678.0
offset_right = 1860.0
offset_bottom = 795.0
theme_override_font_sizes/font_size = 46
text = "opcion B"
autowrap_mode = 3

[node name="OpcionC" type="Button" parent="."]
offset_left = 101.0
offset_top = 842.0
offset_right = 904.0
offset_bottom = 959.0
theme_override_font_sizes/font_size = 46
text = "opcion C"
autowrap_mode = 3

[node name="Pregunta" type="Label" parent="."]
offset_left = 280.0
offset_top = 263.0
offset_right = 1690.0
offset_bottom = 444.0
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 76
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Puntaje" type="Label" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 70.0
offset_top = 40.0
offset_right = 313.0
offset_bottom = 124.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 8
size_flags_vertical = 1
theme_override_font_sizes/font_size = 61
text = "Puntaje:"
metadata/_edit_use_anchors_ = true

[node name="Audio" type="AudioStreamPlayer" parent="."]

[connection signal="pressed" from="OpcionA" to="." method="_on_opcion_a_pressed"]
[connection signal="pressed" from="OpcionD" to="." method="_on_opcion_d_pressed"]
[connection signal="pressed" from="OpcionB" to="." method="_on_opcion_b_pressed"]
[connection signal="pressed" from="OpcionC" to="." method="_on_opcion_c_pressed"]
